--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap": "^5.3.2",
     "keycloak-js": "^20.0.3",
     "paymentiq-cashier-bootstrapper": "^1.3.19",
-    "react": "^18.2.0",
+    "react": "",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
