--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.2",
     "keycloak-js": "^20.0.3",
-    "paymentiq-cashier-bootstrapper": "^1.3.19",
+    "paymentiq-cashier-bootstrapper": "1.3.27",
     "react": "",
     "react-ace": "^11.0.1",
     "react-dom": "^18.2.0",
