--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.2",
     "keycloak-js": "^20.0.3",
-    "paymentiq-cashier-bootstrapper": "^1.3.19",
+    "paymentiq-cashier-bootstrapper": "1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
